fix Next Up and headerTab visibility

--- a/Jellypane.css
+++ b/Jellypane.css
@@ -2480,11 +2480,10 @@ progress::-webkit-progress-value {
 }
 
 .layout-desktop #itemDetailPage div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
-  margin: 0;
-  padding-bottom: .2em;
-  padding-top: .5em;
-  scroll-snap-align: unset;
-  font-weight: 600;
+	margin: 0;
+	scroll-snap-align: unset;
+	font-weight: 600;
+	padding: 0.2em;
 }
 
 .layout-tv #itemDetailPage div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
@@ -2864,8 +2863,11 @@ body {
 .layout-desktop .nextUpSection.verticalSection.detailVerticalSection,
 .layout-tv .nextUpSection.verticalSection.detailVerticalSection {
 	position: absolute;
-	top: -27em;
-	right: 4.45em;
+	top: -24.5em;
+	right: 0em;
+	background: #04133199;
+	border-top-left-radius: 0.2em;
+	padding-left: 1em;
 }
 
 .layout-desktop #itemDetailPage .nextUpSection.verticalSection.detailVerticalSection .sectionTitle.sectionTitle-cards:before,
@@ -3704,4 +3706,12 @@ a[href*="shokoanime.com"] {
 
 .layout-desktop .sections.homeSectionsContainer .verticalSection .emby-scrollbuttons.padded-right {
 	right: -2em;
+}
+
+.headerButton,
+.headerTabs.sectionTabs {
+	pointer-events: all;
+	-webkit-filter: drop-shadow(0px 0px 1px rgb(0, 0, 0));
+	filter: drop-shadow(0px 0px 1px rgb(0, 0, 0));
+	color: #fff;
 }
